--- a/pagina.css
+++ b/pagina.css
@@ -21,8 +21,8 @@ header {
 }
 
 .logo img {
-  width: 40px;
-  margin-right: 10px;
+  width: 80px;
+  margin-right: 1px;
 }
 
 nav ul {
@@ -71,18 +71,16 @@ nav a {
   background: #0077b6;
 }
 
-/* Banner */
-/* Banner */
+
 .banner {
   position: relative;
-  width: 100vw; /* ocupa toda a largura da tela */
-  height: 80vh; /* altura grande (ajustável) */
+  width: 100vw; 
+  height: 80vh; 
   overflow: hidden;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  text-align: center;
   color: white;
 }
 
@@ -92,15 +90,67 @@ nav a {
   left: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover; /* faz a imagem preencher o espaço */
-  z-index: -1; /* fica por trás do texto */
+  object-fit: cover; 
+  z-index: -1; 
+}
+
+.carrosel img {
+  height: 200px;
+  margin-top: 0px;
+}
+
+.meio {
+  position: absolute;
+  left: 625px;
+}
+
+.esquerda {
+position: relative;
+}
+
+.direita {
+   position: static;
+}
+
+/* Botões (setas) */
+.seta {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background: rgba(0,0,0,0.4);
+  border: none;
+  color: white;
+  font-size: 30px;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.seta:hover {
+  background: rgba(0,0,0,0.7);
+}
+
+/* Esquerda */
+.seta-esquerda {
+  left: 300px;
+  top: 175px; /* ajuste como quiser */
+}
+
+/* Direita */
+.seta-direita {
+  right: 300px;
+  top: 175px; /* ajuste como quiser */
 }
 
 .banner h2 {
   font-size: 2rem;
-  background-color: rgba(0, 0, 0, 0.4); /* fundo semitransparente para o texto */
   padding: 10px 20px;
-  border-radius: 10px;
+  margin-top: 100px;
+  color: aliceblue;
+  text-align: center;
+  opacity: 0.9;
 }
 
 
@@ -155,7 +205,7 @@ nav a {
   cursor: pointer;
 }
 
-/* Cassino */
+
 .cassino {
   background-color: #001f70;
   display: flex;
@@ -193,7 +243,7 @@ nav a {
   width: 50%;
 }
 
-/* Rodapé */
+
 footer {
   background-color: #fff;
   text-align: center;
